# tinkclaw-python

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_client.py
examples/: momentum_bot.py  options_bot.py  quickstart.md  streaming_bot.py
tinkclaw/: __init__.py  backtest.py  client.py  strategy.py  stream.py  streaming.py
tinkclaw/brokers/: __init__.py  alpaca.py
