[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinkclaw"
version = "0.3.0"
description = "Official Python SDK for TinkClaw quant intelligence API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "TinkClaw", email = "dev@tinkclaw.com" },
]
keywords = ["trading", "bot", "api", "quant", "finance", "tinkclaw", "confluence", "signals", "crypto"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
brokers = ["alpaca-py>=0.10.0"]

[project.urls]
Documentation = "https://tinkclaw.com/docs"
Source = "https://github.com/tinkclaw/tinkclaw-python"
Issues = "https://github.com/tinkclaw/tinkclaw-python/issues"

[tool.setuptools.packages.find]
exclude = ["tests", "examples", "venv"]
