[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinkclaw"
version = "0.2.0"
description = "Python SDK for the TinkClaw trading signals API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "TinkClaw", email = "dev@tinkclaw.com" }]
keywords = ["trading", "signals", "api", "crypto", "forex", "stocks", "quant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "httpx>=0.24.0",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[project.urls]
Homepage = "https://tinkclaw.com"
Documentation = "https://tinkclaw.com/docs"
Repository = "https://github.com/tinkclaw/tinkclaw-python"

[tool.hatch.build.targets.wheel]
packages = ["tinkclaw"]
