[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinkclaw"
version = "1.0.0"
description = "Official Python SDK for TinkClaw quant intelligence API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "TinkClaw", email = "dev@tinkclaw.com" }]
keywords = ["trading", "bot", "api", "quant", "finance", "tinkclaw", "confluence", "signals", "crypto"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]
brokers = ["alpaca-py>=0.10.0"]
streaming = ["websockets>=12.0"]

[project.urls]
Homepage = "https://tinkclaw.com"
Documentation = "https://tinkclaw.com/docs"
Source = "https://github.com/tinkclaw/tinkclaw-python"
Issues = "https://github.com/tinkclaw/tinkclaw-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["tinkclaw"]
